@@ -39,6 +39,7 @@ Small features:
   * Add cl_arg_free, callback_arg_free, prologue_callback_arg_free fields to
     enable automatic free(cl_arg); free(callback_arg);
     free(prologue_callback_arg) on task destroy.
+  * New function starpu_task_build
 
 Changes:
   * Modification of perfmodels output format for future improvements.
